tests/expectations/compiler/function/duplicate_definition_fail.out
Error [EAST0372017]: The name `main` is defined multiple times.
    --> compiler-test:8:4
     |
   4 |   fn main(y: bool) -> bool {
     |      ^^^^ previous definition of `main` here
   ...
   8 |   fn main(y: bool) -> bool {
     |      ^^^^ `main` redefined here
